--- a/greenpost/src/index.html
+++ b/greenpost/src/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzCDlaOcyPw3hd07fPaHq3Es6L7mh8zsA" type="text/javascript"></script>
 </head>
 <body>
     <app-root></app-root>
